[package]
name = "ws_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures-util = { version = "0.3.29", features = ["futures-sink", "sink"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-websockets = { version = "0.4.1", features = ["server", "native-tls", "sha1_smol"] }
websocket-lite = "0.5.2"
openssl-sys = "*"
log = "0.4.20"
bytes = "1.5.0"

[features]
vendored = ["openssl-sys/vendored"]
